# bff

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml  testing.yml
configs/: grcov.yaml
src/: args.rs  commands.rs  cursor.rs  delta.rs  direction.rs  main.rs  program.rs  repl.rs  runner.rs
src/program/: bounds.rs  commands.rs  cursor.rs  delta.rs  fungetypes.rs  grid.rs  instructions.rs  interface.rs  mod.rs  sstack.rs  sysinfo.rs  vm.rs
src/program/fingerprints/: mod.rs
tests/: bf93_testcases.rs  test_errors.rs  test_mycology.rs  test_repl.rs  test_types.rs  testcases_93.rs  testcases_98.rs
tests/befunge_programs/: quine.bf
tests/bf93/: borders.bf  compare.bf  div_by_zero.bf  getout.bf  mycorand.bf  primecheck.bf
tests/bf98/: diagonal_negspace.b98  hello_world.b98  k1.b98  k2.b98  k3.b98  k4.b98  k5.b98  non_cardinal.b98  outside_twice.b98  pg_out.b98  roundabout.b98  roundabout_diag_first.b98  roundabout_reverse.b98  simple_block.b98
