[package]
name = "bff"
authors = ["Sotiris Niarchos <sot.niarchos@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A Befunge 93 (and soon 98) interpreter in Rust"
keywords = ["interpreter", "befunge"]
categories = ["command-line-utilities", "compilers"]
repository = "https://github.com/zehanort/bff"
licence = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1.1"
