[package]
name = "bff"
authors = ["Sotiris Niarchos <sot.niarchos@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "A Befunge 93 (and soon 98) interpreter in Rust"
keywords = ["interpreter", "befunge"]
categories = ["command-line-utilities", "compilers"]
repository = "https://github.com/zehanort/bff"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
rand = "0.8.3"
num = "0.4.0"
bstr = "0.2.17"
colour = "0.6.0"
clap = { version = "3.0.10", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1.1"
